Unit tests impl